parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> PROG ID check_program ; gvars store_gvars functions gvars store_gvars main
Rule 2     gvars -> VAR datatype gvarids store_gtype ; gvars
Rule 3     gvars -> <empty>
Rule 4     gvarids -> ID
Rule 5     gvarids -> ID , gvarids
Rule 6     gvarids -> <empty>
Rule 7     store_gvars -> <empty>
Rule 8     store_gtype -> <empty>
Rule 9     vars -> VAR datatype varids store_type ; vars
Rule 10    vars -> <empty>
Rule 11    varids -> ID darray
Rule 12    varids -> ID darray , varids
Rule 13    varids -> <empty>
Rule 14    store_type -> <empty>
Rule 15    darray -> <empty>
Rule 16    darray -> [ INT ] twodarray
Rule 17    twodarray -> <empty>
Rule 18    twodarray -> [ INT ]
Rule 19    functions -> datatype FUNC ID ( params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
Rule 20    functions -> <empty>
Rule 21    funcontent -> <empty>
Rule 22    funcontent -> statement funcontent
Rule 23    params -> ID : datatype , params
Rule 24    params -> ID : datatype
Rule 25    params -> <empty>
Rule 26    main -> FUNC MAIN ( ) store_funcm { vars store_mainv maincontent }
Rule 27    maincontent -> <empty>
Rule 28    maincontent -> statement maincontent
Rule 29    statement -> loop unload_pv
Rule 30    statement -> input unload_pv
Rule 31    statement -> output unload_pv
Rule 32    statement -> ifelse unload_pv
Rule 33    statement -> returns unload_pv ;
Rule 34    statement -> expr ;
Rule 35    statement -> var_assign unload_pv
Rule 36    statement -> <empty>
Rule 37    statement -> statement statement
Rule 38    var_assign -> idarray store_oper = expr ;
Rule 39    var_assign -> idarray store_oper = ID store_oper ;
Rule 40    var_assign -> ID store_oper = idarray ;
Rule 41    var_assign -> idarray store_oper = idarray store_oper ;
Rule 42    var_assign -> ID store_oper = expr ;
Rule 43    returns -> RETURN expr store_rquad
Rule 44    ifelse -> IF ( expr ) store_gotof { statement } ELSE store_endif { statement }
Rule 45    ifelse -> IF ( expr ) store_gotof { statement } store_endif
Rule 46    output -> OUTPUT ( expr outex ) ;
Rule 47    outex -> <empty>
Rule 48    outex -> , expr outex
Rule 49    input -> INPUT ( ID store_oper ) ;
Rule 50    loop -> WHILE store_jump ( expr ) store_gotof { statement } end_loop
Rule 51    expr -> arexp exprx
Rule 52    exprx -> <empty>
Rule 53    exprx -> exprop arexp
Rule 54    exprop -> OR
Rule 55    exprop -> EQEQ
Rule 56    exprop -> DIFF
Rule 57    exprop -> AND
Rule 58    exprop -> <
Rule 59    exprop -> LOETHAN
Rule 60    exprop -> >
Rule 61    exprop -> GOETHAN
Rule 62    arexp -> term arexpextra
Rule 63    arexp -> term
Rule 64    arexpextra -> <empty>
Rule 65    arexpextra -> - term arexpextra  [precedence=left, level=1]
Rule 66    arexpextra -> + term arexpextra  [precedence=left, level=1]
Rule 67    term -> factor termx
Rule 68    term -> factor
Rule 69    termx -> <empty>
Rule 70    termx -> / factor termx  [precedence=left, level=2]
Rule 71    termx -> * factor termx  [precedence=left, level=2]
Rule 72    factor -> element
Rule 73    factor -> ( store_op expr ) store_op
Rule 74    element -> idarray store_oper
Rule 75    element -> callfunc store_oper
Rule 76    element -> compound store_oper
Rule 77    element -> const store_const
Rule 78    compound -> compoundx
Rule 79    compoundx -> ID store_oper
Rule 80    const -> STRING
Rule 81    const -> FLOAT
Rule 82    const -> INT
Rule 83    const -> FALSE
Rule 84    const -> TRUE
Rule 85    callfunc -> ID verify_func add_fstack ( callfuncpar ver_params ) end_fstack store_gosub
Rule 86    callfuncpar -> <empty>
Rule 87    callfuncpar -> expr store_pquad callfuncparx
Rule 88    callfuncparx -> <empty>
Rule 89    callfuncparx -> , callfuncpar
Rule 90    idarray -> ID [ add_fstack expr end_fstack ]
Rule 91    array -> <empty>
Rule 92    datatype -> VOID
Rule 93    datatype -> D_BOOL
Rule 94    datatype -> D_STRING
Rule 95    datatype -> D_FLOAT
Rule 96    datatype -> D_INT
Rule 97    check_program -> <empty>
Rule 98    store_init_quad -> <empty>
Rule 99    store_funcm -> <empty>
Rule 100   store_funcv -> <empty>
Rule 101   store_params -> <empty>
Rule 102   store_local_vars -> <empty>
Rule 103   store_mainv -> <empty>
Rule 104   store_op -> <empty>
Rule 105   store_oper -> <empty>
Rule 106   store_const -> <empty>
Rule 107   unload_pv -> <empty>
Rule 108   store_rquad -> <empty>
Rule 109   store_argquad -> <empty>
Rule 110   add_dirb -> <empty>
Rule 111   close_func -> <empty>
Rule 112   store_endif -> <empty>
Rule 113   store_pquad -> <empty>
Rule 114   ver_params -> <empty>
Rule 115   verify_func -> <empty>
Rule 116   add_fstack -> <empty>
Rule 117   end_fstack -> <empty>
Rule 118   store_gosub -> <empty>
Rule 119   store_gotof -> <empty>
Rule 120   store_jump -> <empty>
Rule 121   end_loop -> <empty>

Unused terminals:

    COMMENT

Terminals, with rules where they appear:

(                    : 19 26 44 45 46 49 50 73 85
)                    : 19 26 44 45 46 49 50 73 85
*                    : 71
+                    : 66
,                    : 5 12 23 48 89
-                    : 65
/                    : 70
:                    : 23 24
;                    : 1 2 9 33 34 38 39 40 41 42 46 49
<                    : 58
=                    : 38 39 40 41 42
>                    : 60
AND                  : 57
COMMENT              : 
DIFF                 : 56
D_BOOL               : 93
D_FLOAT              : 95
D_INT                : 96
D_STRING             : 94
ELSE                 : 44
EQEQ                 : 55
FALSE                : 83
FLOAT                : 81
FUNC                 : 19 26
GOETHAN              : 61
ID                   : 1 4 5 11 12 19 23 24 39 40 42 49 79 85 90
IF                   : 44 45
INPUT                : 49
INT                  : 16 18 82
LOETHAN              : 59
MAIN                 : 26
OR                   : 54
OUTPUT               : 46
PROG                 : 1
RETURN               : 43
STRING               : 80
TRUE                 : 84
VAR                  : 2 9
VOID                 : 92
WHILE                : 50
[                    : 16 18 90
]                    : 16 18 90
error                : 
{                    : 19 26 44 44 45 50
}                    : 19 26 44 44 45 50

Nonterminals, with rules where they appear:

add_dirb             : 
add_fstack           : 85 90
arexp                : 51 53
arexpextra           : 62 65 66
array                : 
callfunc             : 75
callfuncpar          : 85 89
callfuncparx         : 87
check_program        : 1
close_func           : 19
compound             : 76
compoundx            : 78
const                : 77
darray               : 11 12
datatype             : 2 9 19 23 24
element              : 72
end_fstack           : 85 90
end_loop             : 50
expr                 : 34 38 42 43 44 45 46 48 50 73 87 90
exprop               : 53
exprx                : 51
factor               : 67 68 70 71
funcontent           : 19 22
functions            : 1 19
gvarids              : 2 5
gvars                : 1 1 2
idarray              : 38 39 40 41 41 74
ifelse               : 32
input                : 30
loop                 : 29
main                 : 1
maincontent          : 26 28
outex                : 46 48
output               : 31
params               : 19 23
program              : 0
returns              : 33
statement            : 22 28 37 37 44 44 45 50
store_argquad        : 
store_const          : 77
store_endif          : 44 45
store_funcm          : 26
store_funcv          : 19
store_gosub          : 85
store_gotof          : 44 45 50
store_gtype          : 2
store_gvars          : 1 1
store_init_quad      : 19
store_jump           : 50
store_local_vars     : 19
store_mainv          : 26
store_op             : 73 73
store_oper           : 38 39 39 40 41 41 42 49 74 75 76 79
store_params         : 19
store_pquad          : 87
store_rquad          : 43
store_type           : 9
term                 : 62 63 65 66
termx                : 67 70 71
twodarray            : 16
unload_pv            : 29 30 31 32 33 35
var_assign           : 35
varids               : 9 12
vars                 : 9 19 26
ver_params           : 85
verify_func          : 85


state 0

    (0) S' -> . program
    (1) program -> . PROG ID check_program ; gvars store_gvars functions gvars store_gvars main
    PROG            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (1) program -> PROG . ID check_program ; gvars store_gvars functions gvars store_gvars main
    ID              shift and go to state 3


state 3

    (1) program -> PROG ID . check_program ; gvars store_gvars functions gvars store_gvars main
    (97) check_program -> .
    ;               reduce using rule 97 (check_program -> .)

    check_program                  shift and go to state 4

state 4

    (1) program -> PROG ID check_program . ; gvars store_gvars functions gvars store_gvars main
    ;               shift and go to state 5


state 5

    (1) program -> PROG ID check_program ; . gvars store_gvars functions gvars store_gvars main
    (2) gvars -> . VAR datatype gvarids store_gtype ; gvars
    (3) gvars -> .
  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 7
    VOID            reduce using rule 3 (gvars -> .)
    D_BOOL          reduce using rule 3 (gvars -> .)
    D_STRING        reduce using rule 3 (gvars -> .)
    D_FLOAT         reduce using rule 3 (gvars -> .)
    D_INT           reduce using rule 3 (gvars -> .)
    FUNC            reduce using rule 3 (gvars -> .)

    gvars                          shift and go to state 6

state 6

    (1) program -> PROG ID check_program ; gvars . store_gvars functions gvars store_gvars main
    (7) store_gvars -> .
    VOID            reduce using rule 7 (store_gvars -> .)
    D_BOOL          reduce using rule 7 (store_gvars -> .)
    D_STRING        reduce using rule 7 (store_gvars -> .)
    D_FLOAT         reduce using rule 7 (store_gvars -> .)
    D_INT           reduce using rule 7 (store_gvars -> .)
    VAR             reduce using rule 7 (store_gvars -> .)
    FUNC            reduce using rule 7 (store_gvars -> .)

    store_gvars                    shift and go to state 8

state 7

    (2) gvars -> VAR . datatype gvarids store_gtype ; gvars
    (92) datatype -> . VOID
    (93) datatype -> . D_BOOL
    (94) datatype -> . D_STRING
    (95) datatype -> . D_FLOAT
    (96) datatype -> . D_INT
    VOID            shift and go to state 10
    D_BOOL          shift and go to state 11
    D_STRING        shift and go to state 12
    D_FLOAT         shift and go to state 13
    D_INT           shift and go to state 14

    datatype                       shift and go to state 9

state 8

    (1) program -> PROG ID check_program ; gvars store_gvars . functions gvars store_gvars main
    (19) functions -> . datatype FUNC ID ( params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    (20) functions -> .
    (92) datatype -> . VOID
    (93) datatype -> . D_BOOL
    (94) datatype -> . D_STRING
    (95) datatype -> . D_FLOAT
    (96) datatype -> . D_INT
    VAR             reduce using rule 20 (functions -> .)
    FUNC            reduce using rule 20 (functions -> .)
    VOID            shift and go to state 10
    D_BOOL          shift and go to state 11
    D_STRING        shift and go to state 12
    D_FLOAT         shift and go to state 13
    D_INT           shift and go to state 14

    functions                      shift and go to state 15
    datatype                       shift and go to state 16

state 9

    (2) gvars -> VAR datatype . gvarids store_gtype ; gvars
    (4) gvarids -> . ID
    (5) gvarids -> . ID , gvarids
    (6) gvarids -> .
    ID              shift and go to state 18
    ;               reduce using rule 6 (gvarids -> .)

    gvarids                        shift and go to state 17

state 10

    (92) datatype -> VOID .
    ID              reduce using rule 92 (datatype -> VOID .)
    ;               reduce using rule 92 (datatype -> VOID .)
    FUNC            reduce using rule 92 (datatype -> VOID .)
    ,               reduce using rule 92 (datatype -> VOID .)
    )               reduce using rule 92 (datatype -> VOID .)


state 11

    (93) datatype -> D_BOOL .
    ID              reduce using rule 93 (datatype -> D_BOOL .)
    ;               reduce using rule 93 (datatype -> D_BOOL .)
    FUNC            reduce using rule 93 (datatype -> D_BOOL .)
    ,               reduce using rule 93 (datatype -> D_BOOL .)
    )               reduce using rule 93 (datatype -> D_BOOL .)


state 12

    (94) datatype -> D_STRING .
    ID              reduce using rule 94 (datatype -> D_STRING .)
    ;               reduce using rule 94 (datatype -> D_STRING .)
    FUNC            reduce using rule 94 (datatype -> D_STRING .)
    ,               reduce using rule 94 (datatype -> D_STRING .)
    )               reduce using rule 94 (datatype -> D_STRING .)


state 13

    (95) datatype -> D_FLOAT .
    ID              reduce using rule 95 (datatype -> D_FLOAT .)
    ;               reduce using rule 95 (datatype -> D_FLOAT .)
    FUNC            reduce using rule 95 (datatype -> D_FLOAT .)
    ,               reduce using rule 95 (datatype -> D_FLOAT .)
    )               reduce using rule 95 (datatype -> D_FLOAT .)


state 14

    (96) datatype -> D_INT .
    ID              reduce using rule 96 (datatype -> D_INT .)
    ;               reduce using rule 96 (datatype -> D_INT .)
    FUNC            reduce using rule 96 (datatype -> D_INT .)
    ,               reduce using rule 96 (datatype -> D_INT .)
    )               reduce using rule 96 (datatype -> D_INT .)


state 15

    (1) program -> PROG ID check_program ; gvars store_gvars functions . gvars store_gvars main
    (2) gvars -> . VAR datatype gvarids store_gtype ; gvars
    (3) gvars -> .
    VAR             shift and go to state 7
    FUNC            reduce using rule 3 (gvars -> .)

    gvars                          shift and go to state 19

state 16

    (19) functions -> datatype . FUNC ID ( params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    FUNC            shift and go to state 20


state 17

    (2) gvars -> VAR datatype gvarids . store_gtype ; gvars
    (8) store_gtype -> .
    ;               reduce using rule 8 (store_gtype -> .)

    store_gtype                    shift and go to state 21

state 18

    (4) gvarids -> ID .
    (5) gvarids -> ID . , gvarids
    ;               reduce using rule 4 (gvarids -> ID .)
    ,               shift and go to state 22


state 19

    (1) program -> PROG ID check_program ; gvars store_gvars functions gvars . store_gvars main
    (7) store_gvars -> .
    FUNC            reduce using rule 7 (store_gvars -> .)

    store_gvars                    shift and go to state 23

state 20

    (19) functions -> datatype FUNC . ID ( params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    ID              shift and go to state 24


state 21

    (2) gvars -> VAR datatype gvarids store_gtype . ; gvars
    ;               shift and go to state 25


state 22

    (5) gvarids -> ID , . gvarids
    (4) gvarids -> . ID
    (5) gvarids -> . ID , gvarids
    (6) gvarids -> .
    ID              shift and go to state 18
    ;               reduce using rule 6 (gvarids -> .)

    gvarids                        shift and go to state 26

state 23

    (1) program -> PROG ID check_program ; gvars store_gvars functions gvars store_gvars . main
    (26) main -> . FUNC MAIN ( ) store_funcm { vars store_mainv maincontent }
    FUNC            shift and go to state 28

    main                           shift and go to state 27

state 24

    (19) functions -> datatype FUNC ID . ( params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    (               shift and go to state 29


state 25

    (2) gvars -> VAR datatype gvarids store_gtype ; . gvars
    (2) gvars -> . VAR datatype gvarids store_gtype ; gvars
    (3) gvars -> .
  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 7
    VOID            reduce using rule 3 (gvars -> .)
    D_BOOL          reduce using rule 3 (gvars -> .)
    D_STRING        reduce using rule 3 (gvars -> .)
    D_FLOAT         reduce using rule 3 (gvars -> .)
    D_INT           reduce using rule 3 (gvars -> .)
    FUNC            reduce using rule 3 (gvars -> .)

    gvars                          shift and go to state 30

state 26

    (5) gvarids -> ID , gvarids .
    ;               reduce using rule 5 (gvarids -> ID , gvarids .)


state 27

    (1) program -> PROG ID check_program ; gvars store_gvars functions gvars store_gvars main .
    $end            reduce using rule 1 (program -> PROG ID check_program ; gvars store_gvars functions gvars store_gvars main .)


state 28

    (26) main -> FUNC . MAIN ( ) store_funcm { vars store_mainv maincontent }
    MAIN            shift and go to state 31


state 29

    (19) functions -> datatype FUNC ID ( . params ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    (23) params -> . ID : datatype , params
    (24) params -> . ID : datatype
    (25) params -> .
    ID              shift and go to state 32
    )               reduce using rule 25 (params -> .)

    params                         shift and go to state 33

state 30

    (2) gvars -> VAR datatype gvarids store_gtype ; gvars .
    VOID            reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    D_BOOL          reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    D_STRING        reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    D_FLOAT         reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    D_INT           reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    VAR             reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)
    FUNC            reduce using rule 2 (gvars -> VAR datatype gvarids store_gtype ; gvars .)


state 31

    (26) main -> FUNC MAIN . ( ) store_funcm { vars store_mainv maincontent }
    (               shift and go to state 34


state 32

    (23) params -> ID . : datatype , params
    (24) params -> ID . : datatype
    :               shift and go to state 35


state 33

    (19) functions -> datatype FUNC ID ( params . ) store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    )               shift and go to state 36


state 34

    (26) main -> FUNC MAIN ( . ) store_funcm { vars store_mainv maincontent }
    )               shift and go to state 37


state 35

    (23) params -> ID : . datatype , params
    (24) params -> ID : . datatype
    (92) datatype -> . VOID
    (93) datatype -> . D_BOOL
    (94) datatype -> . D_STRING
    (95) datatype -> . D_FLOAT
    (96) datatype -> . D_INT
    VOID            shift and go to state 10
    D_BOOL          shift and go to state 11
    D_STRING        shift and go to state 12
    D_FLOAT         shift and go to state 13
    D_INT           shift and go to state 14

    datatype                       shift and go to state 38

state 36

    (19) functions -> datatype FUNC ID ( params ) . store_funcv store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    (100) store_funcv -> .
    {               reduce using rule 100 (store_funcv -> .)

    store_funcv                    shift and go to state 39

state 37

    (26) main -> FUNC MAIN ( ) . store_funcm { vars store_mainv maincontent }
    (99) store_funcm -> .
    {               reduce using rule 99 (store_funcm -> .)

    store_funcm                    shift and go to state 40

state 38

    (23) params -> ID : datatype . , params
    (24) params -> ID : datatype .
    ,               shift and go to state 41
    )               reduce using rule 24 (params -> ID : datatype .)


state 39

    (19) functions -> datatype FUNC ID ( params ) store_funcv . store_params store_init_quad { vars store_local_vars funcontent } close_func functions
    (101) store_params -> .
    {               reduce using rule 101 (store_params -> .)

    store_params                   shift and go to state 42

state 40

    (26) main -> FUNC MAIN ( ) store_funcm . { vars store_mainv maincontent }
    {               shift and go to state 43


state 41

    (23) params -> ID : datatype , . params
    (23) params -> . ID : datatype , params
    (24) params -> . ID : datatype
    (25) params -> .
    ID              shift and go to state 32
    )               reduce using rule 25 (params -> .)

    params                         shift and go to state 44

state 42

    (19) functions -> datatype FUNC ID ( params ) store_funcv store_params . store_init_quad { vars store_local_vars funcontent } close_func functions
    (98) store_init_quad -> .
    {               reduce using rule 98 (store_init_quad -> .)

    store_init_quad                shift and go to state 45

state 43

    (26) main -> FUNC MAIN ( ) store_funcm { . vars store_mainv maincontent }
    (9) vars -> . VAR datatype varids store_type ; vars
    (10) vars -> .
    VAR             shift and go to state 47
    WHILE           reduce using rule 10 (vars -> .)
    INPUT           reduce using rule 10 (vars -> .)
    OUTPUT          reduce using rule 10 (vars -> .)
    IF              reduce using rule 10 (vars -> .)
    RETURN          reduce using rule 10 (vars -> .)
    ID              reduce using rule 10 (vars -> .)
    (               reduce using rule 10 (vars -> .)
    STRING          reduce using rule 10 (vars -> .)
    FLOAT           reduce using rule 10 (vars -> .)
    INT             reduce using rule 10 (vars -> .)
    FALSE           reduce using rule 10 (vars -> .)
    TRUE            reduce using rule 10 (vars -> .)
    }               reduce using rule 10 (vars -> .)

    vars                           shift and go to state 46

state 44

    (23) params -> ID : datatype , params .
    )               reduce using rule 23 (params -> ID : datatype , params .)


state 45

    (19) functions -> datatype FUNC ID ( params ) store_funcv store_params store_init_quad . { vars store_local_vars funcontent } close_func functions
    {               shift and go to state 48


state 46

    (26) main -> FUNC MAIN ( ) store_funcm { vars . store_mainv maincontent }
    (103) store_mainv -> .
    WHILE           reduce using rule 103 (store_mainv -> .)
    INPUT           reduce using rule 103 (store_mainv -> .)
    OUTPUT          reduce using rule 103 (store_mainv -> .)
    IF              reduce using rule 103 (store_mainv -> .)
    RETURN          reduce using rule 103 (store_mainv -> .)
    ID              reduce using rule 103 (store_mainv -> .)
    (               reduce using rule 103 (store_mainv -> .)
    STRING          reduce using rule 103 (store_mainv -> .)
    FLOAT           reduce using rule 103 (store_mainv -> .)
    INT             reduce using rule 103 (store_mainv -> .)
    FALSE           reduce using rule 103 (store_mainv -> .)
    TRUE            reduce using rule 103 (store_mainv -> .)
    }               reduce using rule 103 (store_mainv -> .)

    store_mainv                    shift and go to state 49

state 47

    (9) vars -> VAR . datatype varids store_type ; vars
    (92) datatype -> . VOID
    (93) datatype -> . D_BOOL
    (94) datatype -> . D_STRING
    (95) datatype -> . D_FLOAT
    (96) datatype -> . D_INT
    VOID            shift and go to state 10
    D_BOOL          shift and go to state 11
    D_STRING        shift and go to state 12
    D_FLOAT         shift and go to state 13
    D_INT           shift and go to state 14

    datatype                       shift and go to state 50

state 48

    (19) functions -> datatype FUNC ID ( params ) store_funcv store_params store_init_quad { . vars store_local_vars funcontent } close_func functions
    (9) vars -> . VAR datatype varids store_type ; vars
    (10) vars -> .
    VAR             shift and go to state 47
    WHILE           reduce using rule 10 (vars -> .)
    INPUT           reduce using rule 10 (vars -> .)
    OUTPUT          reduce using rule 10 (vars -> .)
    IF              reduce using rule 10 (vars -> .)
    RETURN          reduce using rule 10 (vars -> .)
    ID              reduce using rule 10 (vars -> .)
    (               reduce using rule 10 (vars -> .)
    STRING          reduce using rule 10 (vars -> .)
    FLOAT           reduce using rule 10 (vars -> .)
    INT             reduce using rule 10 (vars -> .)
    FALSE           reduce using rule 10 (vars -> .)
    TRUE            reduce using rule 10 (vars -> .)
    }               reduce using rule 10 (vars -> .)

    vars                           shift and go to state 51

state 49

    (26) main -> FUNC MAIN ( ) store_funcm { vars store_mainv . maincontent }
    (27) maincontent -> .
    (28) maincontent -> . statement maincontent
    (29) statement -> . loop unload_pv
    (30) statement -> . input unload_pv
    (31) statement -> . output unload_pv
    (32) statement -> . ifelse unload_pv
    (33) statement -> . returns unload_pv ;
    (34) statement -> . expr ;
    (35) statement -> . var_assign unload_pv
    (36) statement -> .
    (37) statement -> . statement statement
    (50) loop -> . WHILE store_jump ( expr ) store_gotof { statement } end_loop
    (49) input -> . INPUT ( ID store_oper ) ;
    (46) output -> . OUTPUT ( expr outex ) ;
    (44) ifelse -> . IF ( expr ) store_gotof { statement } ELSE store_endif { statement }
    (45) ifelse -> . IF ( expr ) store_gotof { statement } store_endif
    (43) returns -> . RETURN expr store_rquad
    (51) expr -> . arexp exprx
    (38) var_assign -> . idarray store_oper = expr ;
    (39) var_assign -> . idarray store_oper = ID store_oper ;
    (40) var_assign -> . ID store_oper = idarray ;
    (41) var_assign -> . idarray store_oper = idarray store_oper ;
    (42) var_assign -> . ID store_oper = expr ;
    (62) arexp -> . term arexpextra
    (63) arexp -> . term
    (90) idarray -> . ID [ add_fstack expr end_fstack ]
    (67) term -> . factor termx
    (68) term -> . factor
    (72) factor -> . element
    (73) factor -> . ( store_op expr ) store_op
    (74) element -> . idarray store_oper
    (75) element -> . callfunc store_oper
    (76) element -> . compound store_oper
    (77) element -> . const store_const
    (85) callfunc -> . ID verify_func add_fstack ( callfuncpar ver_params ) end_fstack store_gosub
    (78) compound -> . compoundx
    (80) const -> . STRING
    (81) const -> . FLOAT
    (82) const -> . INT
    (83) const -> . FALSE
    (84) const -> . TRUE
    (79) compoundx -> . ID store_oper
  ! reduce/reduce conflict for } resolved using rule 27 (maincontent -> .)
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for OUTPUT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
    }               reduce using rule 27 (maincontent -> .)
    WHILE           shift and go to state 62
    INPUT           shift and go to state 63
    OUTPUT          shift and go to state 65
    IF              shift and go to state 66
    RETURN          shift and go to state 67
    ID              shift and go to state 64
    (               shift and go to state 52
    STRING          shift and go to state 77
    FLOAT           shift and go to state 78
    INT             shift and go to state 79
    FALSE           shift and go to state 80
    TRUE            shift and go to state 81

    maincontent                    shift and go to state 53
    statement                      shift and go to state 54
    loop                           shift and go to state 55
    input                          shift and go to state 56
    output                         shift and go to state 57
    ifelse                         shift and go to state 58
    returns                        shift and go to state 59
    expr                           shift and go to state 60
    var_assign                     shift and go to state 61
    arexp                          shift and go to state 68
    idarray                        shift and go to state 69
    term                           shift and go to state 70
    factor                         shift and go to state 71
    element                        shift and go to state 72
    callfunc                       shift and go to state 73
    compound                       shift and go to state 74
    const                          shift and go to state 75
    compoundx                      shift and go to state 76

state 50

    (9) vars -> VAR datatype . varids store_type ; vars
    (11) varids -> . ID darray
    (12) varids -> . ID darray , varids
    (13) varids -> .
    ID              shift and go to state 83
    ;               reduce using rule 13 (varids -> .)

    varids                         shift and go to state 82

state 51

    (19) functions -> datatype FUNC ID ( params ) store_funcv store_params store_init_quad { vars . store_local_vars funcontent } close_func functions
    (102) store_local_vars -> .
    WHILE           reduce using rule 102 (store_local_vars -> .)
    INPUT           reduce using rule 102 (store_local_vars -> .)
    OUTPUT          reduce using rule 102 (store_local_vars -> .)
    IF              reduce using rule 102 (store_local_vars -> .)
    RETURN          reduce using rule 102 (store_local_vars -> .)
    ID              reduce using rule 102 (store_local_vars -> .)
    (               reduce using rule 102 (store_local_vars -> .)
    STRING          reduce using rule 102 (store_local_vars -> .)
    FLOAT           reduce using rule 102 (store_local_vars -> .)
    INT             reduce using rule 102 (store_local_vars -> .)
    FALSE           reduce using rule 102 (store_local_vars -> .)
    TRUE            reduce using rule 102 (store_local_vars -> .)
    }               reduce using rule 102 (store_local_vars -> .)

    store_local_vars               shift and go to state 84

state 52

    (73) factor -> ( . store_op expr ) store_op
    (104) store_op -> .
    (               reduce using rule 104 (store_op -> .)
    ID              reduce using rule 104 (store_op -> .)
    STRING          reduce using rule 104 (store_op -> .)
    FLOAT           reduce using rule 104 (store_op -> .)
    INT             reduce using rule 104 (store_op -> .)
    FALSE           reduce using rule 104 (store_op -> .)
    TRUE            reduce using rule 104 (store_op -> .)

    store_op                       shift and go to state 85

state 53

    (26) main -> FUNC MAIN ( ) store_funcm { vars store_mainv maincontent . }
    }               shift and go to state 86


state 54

    (28) maincontent -> statement . maincontent
    (37) statement -> statement . statement
    (27) maincontent -> .
    (28) maincontent -> . statement maincontent
    (29) statement -> . loop unload_pv
    (30) statement -> . input unload_pv
    (31) statement -> . output unload_pv
    (32) statement -> . ifelse unload_pv
    (33) statement -> . returns unload_pv ;
    (34) statement -> . expr ;
    (35) statement -> . var_assign unload_pv
    (36) statement -> .
    (37) statement -> . statement statement
    (50) loop -> . WHILE store_jump ( expr ) store_gotof { statement } end_loop
    (49) input -> . INPUT ( ID store_oper ) ;
    (46) output -> . OUTPUT ( expr outex ) ;
    (44) ifelse -> . IF ( expr ) store_gotof { statement } ELSE store_endif { statement }
    (45) ifelse -> . IF ( expr ) store_gotof { statement } store_endif
    (43) returns -> . RETURN expr store_rquad
    (51) expr -> . arexp exprx
    (38) var_assign -> . idarray store_oper = expr ;
    (39) var_assign -> . idarray store_oper = ID store_oper ;
    (40) var_assign -> . ID store_oper = idarray ;
    (41) var_assign -> . idarray store_oper = idarray store_oper ;
    (42) var_assign -> . ID store_oper = expr ;
    (62) arexp -> . term arexpextra
    (63) arexp -> . term
    (90) idarray -> . ID [ add_fstack expr end_fstack ]
    (67) term -> . factor termx
    (68) term -> . factor
    (72) factor -> . element
    (73) factor -> . ( store_op expr ) store_op
    (74) element -> . idarray store_oper
    (75) element -> . callfunc store_oper
    (76) element -> . compound store_oper
    (77) element -> . const store_const
    (85) callfunc -> . ID verify_func add_fstack ( callfuncpar ver_params ) end_fstack store_gosub
    (78) compound -> . compoundx
    (80) const -> . STRING
    (81) const -> . FLOAT
    (82) const -> . INT
    (83) const -> . FALSE
    (84) const -> . TRUE
    (79) compoundx -> . ID store_oper
  ! reduce/reduce conflict for } resolved using rule 27 (maincontent -> .)
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for INPUT resolved as shift
  ! shift/reduce conflict for OUTPUT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
    }               reduce using rule 27 (maincontent -> .)
    WHILE           shift and go to state 62
    INPUT           shift and go to state 63
    OUTPUT          shift and go to state 65
    IF              shift and go to state 66
    RETURN          shift and go to state 67
    ID              shift and go to state 64
    (               shift and go to state 52
    STRING          shift and go to state 77
    FLOAT           shift and go to state 78
    INT             shift and go to state 79
    FALSE           shift and go to state 80
    TRUE            shift and go to state 81

    statement                      shift and go to state 87
    maincontent                    shift and go to state 88
    loop                           shift and go to state 55
    input                          shift and go to state 56
    output                         shift and go to state 57
    ifelse                         shift and go to state 58
    returns                        shift and go to state 59
    expr                           shift and go to state 60
    var_assign                     shift and go to state 61
    arexp                          shift and go to state 68
    idarray                        shift and go to state 69
    term                           shift and go to state 70
    factor                         shift and go to state 71
    element                        shift and go to state 72
    callfunc                       shift and go to state 73
    compound                       shift and go to state 74
    const                          shift and go to state 75
    compoundx                      shift and go to state 76

state 55
